# s8njee-django

./: .dockerignore  .env.example  .gitignore  ASYNC.md  BUGFIXES 2.md  DEPLOY.md  DEV.md  FutureResearchNeeded.md  IDEAS.md  IMPLEMENTATION.md  README.md  STUDY_GUIDE.md  ToDo.md  db.env.example  docker-compose.yml
archive/: README.md
archive/photos-standalone-app/: Dockerfile  main.py  pyproject.toml
archive/photos-standalone-app/albums/: admin.py  forms.py  urls.py  views.py
archive/photos-standalone-app/albums/migrations/: 0001_initial.py  0002_photo_thumbnail.py
archive/photos-standalone-app/config/: settings.py  urls.py
blog/: .dockerignore  .env.example  Dockerfile  manage.py  pyproject.toml  start.sh
blog/albums/: admin.py  apps.py  cache_keys.py  forms.py  image_processing.py  models.py  tagging.py  tasks.py  tests.py  urls.py  views.py
blog/albums/migrations/: 0006_album_cover_photo.py  0008_album_slug_photo_alt_text.py  0009_tag_photo_tags.py
blog/blog/: asgi.py  celery.py  middleware.py  navigation.py  settings.py  tests.py  urls.py  views.py  wsgi.py
blog/blog/settings/: base.py  development.py  production.py
blog/fixtures/: initial_content.json  seed_content.json
blog/posts/: admin.py  apps.py  context_processors.py  db_backups.py  feeds.py  forms.py  markdown.py  models.py  sitemaps.py  tests.py  tests_backups.py  urls.py  views.py
blog/posts/migrations/: 0001_initial.py
blog/static/css/: style.css
blog/templates/: 404.html  500.html  base.html
blog/templates/posts/: post_detail.html  post_editor.html  post_list.html
(+97 files in other folders)
