[project]
name = "photo-albums"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-storages[s3]>=1.14.6",
    "psycopg[binary]>=3.2",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
